--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       };
     </script>
   </head>
-  <body>
+  <body class="scroll">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
